--- a/index.html
+++ b/index.html
@@ -1,20 +1,73 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="style.css">
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
 	</head>
 	<body>
-		<div class="layout">
-			<form id="encForm">
-				<label for="enc">Enter text to be Encrypted</label>
-				<input name="enc" id="enc" placeholder="Enter plain text"> </input>
-				<p id="enc-result"></p>
-			</form>
-			<form id="decForm">
-				<label for="dec">Enter text to be Decrypted</label>
-				<input name="dec" id="dec" placeholder="Enter text to Decrypt"> </input>
-				<p id="dec-result"></p>		
-			</form>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-sm-6 col-xs-12">
+					<h3>AES Online Encryption</h3>
+					<form id="encForm">
+						<label for="enc">Enter text to be Encrypted</label>
+						<br />
+						<textarea
+							style="width: 100%"
+							class="mb-4"
+							rows="4"
+							name="enc"
+							id="enc"
+							placeholder="Enter plain text"
+						></textarea>
+						<label for="key">Enter Secret Key</label>
+						<input type="text" id="key" style="width: 100%" placeholder="Enter secret key" />
+						<button class="btn btn-primary mt-3">Encrypt</button>
+					</form>
+					<label for="enc-result">AES Encrypted Output:</label>
+					<textarea
+						style="width: 100%"
+						class="mb-4"
+						rows="4"
+						name="enc"
+						id="enc-result"
+						placeholder="Enter plain text"
+						readonly
+					></textarea>
+				</div>
+				<div class="col-md-6 col-sm-6 col-xs-12">
+					<h3>AES Online Decryption</h3>
+					<form id="decForm">
+						<label for="dec">Enter text to be Decrypted</label>
+						<br />
+						<textarea
+							style="width: 100%"
+							class="mb-4"
+							rows="4"
+							name="dec"
+							id="dec"
+							placeholder="Result goes here"
+						></textarea>
+						<label for="key">Enter Secret Key</label>
+						<input type="text" id="key" style="width: 100%" placeholder="Enter secret key" />
+						<button class="btn btn-primary mt-3">Decrypt</button>
+					</form>
+					<label for="dec-result">AES Decrypted Output:</label>
+					<textarea
+						style="width: 100%"
+						class="mb-4"
+						rows="4"
+						name="dec"
+						id="dec-result"
+						placeholder="Result goes here"
+						readonly
+					></textarea>
+				</div>
+			</div>
 		</div>
 
 		<script src="wasm_exec.js"></script>
@@ -25,22 +78,22 @@
 			});
 			const encrypt = (e) => {
 				e.preventDefault();
+				const key = e.currentTarget.querySelector('#key').value;
 				const plainText = document.querySelector('#enc').value;
-				const cipherBuff = enc(plainText)
-				console.log(cipherBuff)
-				document.querySelector('#enc-result').innerHTML = new TextDecoder().decode(cipherBuff);
+				const cipherHex = enc(plainText, key);
+				console.log(cipherHex);
+				document.querySelector('#enc-result').value = cipherHex;
 			};
-			document.querySelector('#encForm').addEventListener("submit", encrypt)
+			document.querySelector('#encForm').addEventListener('submit', encrypt);
 
 			const decrypt = (e) => {
 				e.preventDefault();
+				const key = e.currentTarget.querySelector('#key').value;
 				const cipherText = document.querySelector('#dec').value;
-				const cipherBuff = new TextEncoder('utf-8').encode(cipherText)
-				const plainBuff = dec(cipherBuff)
-				console.log(plainBuff)
-				document.querySelector('#dec-result').innerHTML = new TextDecoder().decode(plainBuff);
+				const plainText = dec(cipherText, key);
+				document.querySelector('#dec-result').value = plainText;
 			};
-			document.querySelector('#decForm').addEventListener("submit", decrypt)
+			document.querySelector('#decForm').addEventListener('submit', decrypt);
 		</script>
 	</body>
 </html>
