--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
 			</div>
 		</div>
 
-		<script src="wasm_exec.js"></script>
-		<script src="run.js"></script>
+		<script src="/bundle.js"></script>
 	</body>
 </html>
