--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
 			</div>
 		</div>
 
-		<script src="/bundle.js"></script>
+		<script type="module" src="/bundle.js"></script>
 	</body>
 </html>
