--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
 			</div>
 		</div>
 
-		<script type="module" src="/bundle.js"></script>
+		<script type="module" src="./bundle.js"></script>
 	</body>
 </html>
